--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
 
 
         </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true"
+            android:label="@string/icono_name"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        </activity>
 
         <activity
             android:name=".MainActivity"
